Added some more missing files

--- a/scripts/frontend/test.html
+++ b/scripts/frontend/test.html
@@ -163,16 +163,16 @@ footer {
 	    <td><div id="boardInfoElement"></div></td>
           </tr>
 	  <tr valign="top" align="left">
-  	    <th>Device</th>
+	    <th>Device</th>
 	    <td><div id="boardDeviceElement"></div></td>
 	  </tr>
 	  <tr>
 	    <td valign="top"><b>Peripherals</b></td>
 	    <td><select id="peripheralListElement"></select></td>
-	    <td><button onclick="gui.addButton();">Add >>  </button><br><button onclick="gui.removeButton();"><< Remove</button></td>
-	    <td><select onclick="gui.showPeripheralInfo();" id="selectedListElement" size="4"></select><td>
+	    <td><button onclick="app.addButton();">Add >>  </button><br><button onclick="app.removeButton();"><< Remove</button></td>
+	    <td><select onclick="app.showPeripheralInfo();" id="selectedListElement" size="4"></select><td>
 	    <td valign="top">
- 	      <select id="interfaces"></select><br>
+	      <select id="interfaces"></select><br>
 	      <div id="peripheralPropertiesElement">
 	      </div>
 	    </td>
